[gd_scene load_steps=10 format=3 uid="uid://eu106ff6mela"]

[ext_resource type="Script" path="res://src/plant_ui.gd" id="1_2fqac"]
[ext_resource type="StyleBox" uid="uid://dnmicfmqn34qf" path="res://ui/panel3.tres" id="2_68wlc"]
[ext_resource type="Theme" uid="uid://dewhnganfla67" path="res://ui/rustic_theme.tres" id="3_1d2tj"]
[ext_resource type="StyleBox" uid="uid://dr1jhqgo7vrtr" path="res://ui/panel1.tres" id="4_mw73e"]
[ext_resource type="Texture2D" uid="uid://cv4l35tbarbhx" path="res://assets/plots/plotRed_stage1.png" id="5_n6ei2"]
[ext_resource type="Texture2D" uid="uid://cp5vmnj644iok" path="res://assets/plots/grow_particles.png" id="6_25s6d"]
[ext_resource type="Texture2D" uid="uid://kvjbcf0fed7" path="res://ui/textures/button1.png" id="7_0srnv"]
[ext_resource type="Texture2D" uid="uid://bbd4og732ob8t" path="res://ui/textures/button1_hover.png" id="8_rd3vg"]
[ext_resource type="Texture2D" uid="uid://dgv2exfc8ucwh" path="res://ui/textures/Close.png" id="9_cq5hv"]

[node name="plant_ui" type="CanvasLayer" groups=["plant_UI"]]
script = ExtResource("1_2fqac")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3555.0
offset_top = -2102.0
offset_right = 3535.0
offset_bottom = 2114.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0196078, 0.00784314, 0, 0.611765)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -519.0
offset_top = -466.0
offset_right = 519.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2

[node name="Old" type="PanelContainer" parent="MarginContainer"]
visible = false
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = ExtResource("2_68wlc")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Old"]
layout_mode = 2
alignment = 1

[node name="journalPanel" type="PanelContainer" parent="MarginContainer/Old/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_1d2tj")
theme_override_styles/panel = ExtResource("4_mw73e")

[node name="VBoxContainer1" type="VBoxContainer" parent="MarginContainer/Old/HBoxContainer/journalPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Old/HBoxContainer/journalPanel/VBoxContainer1"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"HeaderLabel"
theme_override_font_sizes/font_size = 45
text = "Lore Journal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="discoveryList" type="VBoxContainer" parent="MarginContainer/Old/HBoxContainer/journalPanel/VBoxContainer1"]
layout_mode = 2

[node name="dicoveryLabel" type="Label" parent="MarginContainer/Old/HBoxContainer/journalPanel/VBoxContainer1/discoveryList"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "
- Discovery 1
- Discovery 2"

[node name="Spacer1" type="Control" parent="MarginContainer/Old/HBoxContainer/journalPanel/VBoxContainer1"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Old/HBoxContainer/journalPanel/VBoxContainer1"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/Old/HBoxContainer/journalPanel/VBoxContainer1/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "Tracking"

[node name="bookPanel" type="PanelContainer" parent="MarginContainer/Old/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("4_mw73e")

[node name="Label" type="Label" parent="MarginContainer/Old/HBoxContainer/bookPanel"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"HeaderLabel"
theme_override_font_sizes/font_size = 45
text = "Book of Lost Formulas"
horizontal_alignment = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_1d2tj")

[node name="plant_window" type="PanelContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -354.0
offset_right = 275.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2

[node name="plant" type="TextureRect" parent="MarginContainer/Panel/plant_window" groups=["plant"]]
layout_mode = 2
texture = ExtResource("5_n6ei2")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/plant_window"]
layout_mode = 2

[node name="particles" type="TextureRect" parent="MarginContainer/Panel/plant_window/VBoxContainer" groups=["particles"]]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
texture = ExtResource("6_25s6d")
expand_mode = 2
stretch_mode = 5

[node name="Control" type="Control" parent="MarginContainer/Panel/plant_window/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -514.0
offset_top = -440.0
offset_right = 514.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer_top" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Spacer_left2" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="essenceFill" type="TextureProgressBar" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
max_value = 30.0
step = 0.0
fill_mode = 8
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_under = ExtResource("7_0srnv")
texture_progress = ExtResource("8_rd3vg")

[node name="Spacer_right2" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.2

[node name="Spacer_left" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="left_button" type="Button" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"plaque"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 55
disabled = true
text = "<"

[node name="HBoxContainer3" type="VBoxContainer" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="up_button" type="Button" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"plaque"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
disabled = true
text = "^"

[node name="Control" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.27

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="right_button" type="Button" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"plaque"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 55
disabled = true
text = ">"

[node name="Spacer_right" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="Spacer_bottom" type="Control" parent="MarginContainer/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="closeButton" type="TextureButton" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 494.0
offset_top = -486.0
offset_right = 558.0
offset_bottom = -422.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0
tooltip_text = "Close"
texture_normal = ExtResource("9_cq5hv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[connection signal="pressed" from="closeButton" to="." method="_on_close_button_pressed"]
